DVDNAV_VERSION missing in libdvdnav 5

Building VLC 3.0.16 on Rocky Linux 8.

configure says it can work with dvdnav version 4.9.0 and above, however with version 5.0.3 (which is what the RHEL 8 based systems provide) the build fails because the headers don't define DVDNAV_VERSION.

The build log excerpt:

[  108s] make[4]: Entering directory '/home/abuild/rpmbuild/BUILD/vlc-3.0.16/modules'
[  108s]   CC       access/libdvdnav_plugin_la-dvdnav.lo
[  108s] access/dvdnav.c:196:5: warning: "DVDNAV_VERSION" is not defined, evaluates to 0 [-Wundef]
[  108s]  #if DVDNAV_VERSION >= 60100
[  108s]      ^~~~~~~~~~~~~~
[  108s] access/dvdnav.c: In function 'AccessDemuxOpen':
[  108s] access/dvdnav.c:374:23: warning: "DVDREAD_VERSION_CODE" is not defined, evaluates to 0 [-Wundef]
[  108s]  #if DVDREAD_VERSION < DVDREAD_VERSION_CODE(6, 1, 2)
[  108s]                        ^~~~~~~~~~~~~~~~~~~~
[  108s] access/dvdnav.c:374:43: error: missing binary operator before token "("
[  108s]  #if DVDREAD_VERSION < DVDREAD_VERSION_CODE(6, 1, 2)
[  108s]                                            ^
[  108s] access/dvdnav.c:382:5: warning: "DVDNAV_VERSION" is not defined, evaluates to 0 [-Wundef]
[  108s]  #if DVDNAV_VERSION >= 60100
[  108s]      ^~~~~~~~~~~~~~
[  108s] access/dvdnav.c:400:23: warning: "DVDREAD_VERSION_CODE" is not defined, evaluates to 0 [-Wundef]
[  108s]  #if DVDREAD_VERSION < DVDREAD_VERSION_CODE(6, 1, 2)
[  108s]                        ^~~~~~~~~~~~~~~~~~~~
[  108s] access/dvdnav.c:400:43: error: missing binary operator before token "("
[  108s]  #if DVDREAD_VERSION < DVDREAD_VERSION_CODE(6, 1, 2)
[  108s]                                            ^
[  108s] access/dvdnav.c: In function 'DemuxOpen':
[  108s] access/dvdnav.c:489:5: warning: "DVDNAV_VERSION" is not defined, evaluates to 0 [-Wundef]
[  108s]  #if DVDNAV_VERSION >= 60100
[  108s]      ^~~~~~~~~~~~~~
[  108s] make[4]: *** [Makefile:22046: access/libdvdnav_plugin_la-dvdnav.lo] Error 1
[  108s] make[4]: Leaving directory '/home/abuild/rpmbuild/BUILD/vlc-3.0.16/modules'
[  108s] make[4]: *** Waiting for unfinished jobs....