DVDNAV: provide a compatibility Macro for older releases

Close #26479